refactor(maker): support more features (#22)
* refactor(maker): add pre parser and remove some unused file

* refactor(maker): remove version control generator

* refactor(maker): use enum to implement singleton meta info

* fix(maker): fix distinct files bug cause inputPath and outputPath

* refactor(maker): update some code comment

* refactor(maker): support dir path replacement

* refactor(maker): support replace code snippets

* refactor(maker): support replace no parse content

* refactor(maker): update file path support