@@ -5,11 +5,13 @@ import cn.hutool.core.bean.copier.CopyOptions;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.util.IdUtil;
+import cn.hutool.core.util.ReUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.json.JSONUtil;
 import io.github.dingxinliang88.maker.meta.Meta;
 import io.github.dingxinliang88.maker.meta.enums.FileGenerateTypeEnum;
 import io.github.dingxinliang88.maker.meta.enums.FileTypeEnum;
+import io.github.dingxinliang88.maker.template.enums.CodeSnippetCheckTypeEnum;
 import io.github.dingxinliang88.maker.template.model.TemplateMakerConfig;
 import io.github.dingxinliang88.maker.template.model.TemplateMakerFileConfig;
 import io.github.dingxinliang88.maker.template.model.TemplateMakerModelConfig;
@@ -19,11 +21,16 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
  * 模板制作
+ * <p>
+ * 生成器通用能力：
+ * <p>
+ * 1. 同参数控制多个文件生成 2. 参数控制是否输入某一组配置 3. 参数控制文件和代码的生成
  *
  * @author <a href="https://github.com/dingxinliang88">youyi</a>
  */
@@ -78,12 +85,12 @@ public class TemplateMaker {
         }
 
         // 1. 输入信息
-        // 1.1 文件信息，获取项目根目录 originProjectPath
+        // 1.1 文件信息，获取项目根目录 sourceRootPath
         String sourceRootPath = FileUtil.loopFiles(new File(templatePath), 1, null)
                 .stream()
                 .filter(File::isDirectory)
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("未找到模板文件"))
+                .orElseThrow(() -> new NoSuchElementException("未找到模板文件"))
                 .getAbsolutePath();
         // 兼容 win
         sourceRootPath = sourceRootPath.replaceAll("\\\\", "/");
@@ -113,19 +120,24 @@ public class TemplateMaker {
             // 2. 配置信息去重
             newMeta.getFileConfig().setFiles(distinctFiles(fileInfoList));
             newMeta.getModelConfig().setModels(distinctModels(modelInfoList));
-        } else {
+        }
+        // 第一次制作
+        else {
             // 1. 构造配置参数
+            // 文件配置
             Meta.FileConfig fileConfig = new Meta.FileConfig();
             newMeta.setFileConfig(fileConfig);
             fileConfig.setSourceRootPath(sourceRootPath);
             List<Meta.FileConfig.FileInfo> fileInfoList = new ArrayList<>();
             fileConfig.setFiles(fileInfoList);
-            fileInfoList.addAll(newFileInfoList);
-
+            // 模型配置
             Meta.ModelConfig modelConfig = new Meta.ModelConfig();
             newMeta.setModelConfig(modelConfig);
             List<Meta.ModelConfig.ModelInfo> modelInfoList = new ArrayList<>();
             modelConfig.setModels(modelInfoList);
+
+            // 2. 设置模型参数
+            fileInfoList.addAll(newFileInfoList);
             modelInfoList.addAll(newModelInfoList);
         }
 
@@ -153,7 +165,6 @@ public class TemplateMaker {
      */
     private static List<Meta.ModelConfig.ModelInfo> getModelInfoList(
             TemplateMakerModelConfig templateMakerModelConfig) {
-
         // 当前轮次新增的模型配置列表
         List<Meta.ModelConfig.ModelInfo> newModelInfoList = new ArrayList<>();
         // npe validate
@@ -164,13 +175,14 @@ public class TemplateMaker {
         if (CollUtil.isEmpty(models)) {
             return newModelInfoList;
         }
-        // 转换为可以接受的 ModelInfo 对象
+        // 转换为可以接收的 ModelInfo 对象
         List<Meta.ModelConfig.ModelInfo> inputModelInfoList = models.stream()
                 .map(modelInfoConfig -> {
                     Meta.ModelConfig.ModelInfo modelInfo = new Meta.ModelConfig.ModelInfo();
                     BeanUtil.copyProperties(modelInfoConfig, modelInfo);
                     return modelInfo;
-                }).collect(Collectors.toList());
+                })
+                .collect(Collectors.toList());
 
         // 如果是模型组
         TemplateMakerModelConfig.ModelGroupConfig modelGroupConfig = templateMakerModelConfig.getModelGroupConfig();
@@ -200,7 +212,7 @@ public class TemplateMaker {
             TemplateMakerFileConfig templateMakerFileConfig,
             TemplateMakerModelConfig templateMakerModelConfig, String sourceRootPath) {
         List<Meta.FileConfig.FileInfo> newFileInfoList = new ArrayList<>();
-        // npe validate
+        // npe validation
         if (Objects.isNull(templateMakerFileConfig)) {
             return newFileInfoList;
         }
@@ -223,7 +235,7 @@ public class TemplateMaker {
             // 不处理已生成的 ftl 模板文件
             fileList = fileList.stream()
                     .filter(file -> !file.getAbsolutePath().endsWith(".ftl"))
-                    .collect(Collectors.toList());
+                    .toList();
             for (File file : fileList) {
                 Meta.FileConfig.FileInfo fileInfo = makeFileTemplate(file, fileInfoConfig,
                         templateMakerModelConfig, sourceRootPath);
@@ -234,16 +246,12 @@ public class TemplateMaker {
         // 如果是文件组
         TemplateMakerFileConfig.FileGroupConfig fileGroupConfig = templateMakerFileConfig.getFileGroupConfig();
         if (Objects.nonNull(fileGroupConfig)) {
-            String condition = fileGroupConfig.getCondition();
-            String groupKey = fileGroupConfig.getGroupKey();
-            String groupName = fileGroupConfig.getGroupName();
-
             // 新增分组配置
             Meta.FileConfig.FileInfo groupFileInfo = new Meta.FileConfig.FileInfo();
             groupFileInfo.setType(FileTypeEnum.GROUP.getValue());
-            groupFileInfo.setCondition(condition);
-            groupFileInfo.setGroupKey(groupKey);
-            groupFileInfo.setGroupName(groupName);
+            groupFileInfo.setCondition(fileGroupConfig.getCondition());
+            groupFileInfo.setGroupKey(fileGroupConfig.getGroupKey());
+            groupFileInfo.setGroupName(fileGroupConfig.getGroupName());
             groupFileInfo.setFiles(newFileInfoList);
 
             newFileInfoList = new ArrayList<>();
@@ -275,9 +283,9 @@ public class TemplateMaker {
 
         // 2. 使用字符串替换算法，生成 ftl 模板文件
         String fileContent;
-        // 如果已有模板文件，说明不是第一次制作，需要在模板的基础上再次制作
         boolean hasTemplateFile = FileUtil.exist(fileOutputAbsolutePath);
         if (hasTemplateFile) {
+            // 如果已有模板文件，说明不是第一次制作，需要在模板的基础上再次制作
             fileContent = FileUtil.readUtf8String(fileOutputAbsolutePath);
         } else {
             fileContent = FileUtil.readUtf8String(fileInputAbsolutePath);
@@ -302,10 +310,79 @@ public class TemplateMaker {
                     replacement);
         }
 
+        // 文件路径替换
+        TemplateMakerModelConfig.ModelInfoConfig fileDirPathConfig = templateMakerModelConfig.getFileDirPathConfig();
+        if (Objects.nonNull(fileDirPathConfig)) {
+            String[] inputPathAndFileSuffix = fileInputPath.split("\\.");
+            if (inputPathAndFileSuffix.length > 1) {
+                String fileSuffix = inputPathAndFileSuffix[1];
+                // 拿到要替换的包名，e.g: com.youyi => com/youyi
+                String replaceText = fileDirPathConfig.getReplaceText().replace(".", "/");
+                // 替换路径，e.g: src/main/java/com/youyi/project/Demo.java => src/main/java/{basePackage}/project/Demo.java
+                fileInputPath = inputPathAndFileSuffix[0].replace(replaceText,
+                        String.format("{%s}", fileDirPathConfig.getFieldName()));
+                // 拼接后缀
+                fileInputPath = fileInputPath + "." + fileSuffix;
+            }
+        }
+
+        // 控制代码片段是否生成
+        List<TemplateMakerFileConfig.CodeSnippetConfig> codeSnippetConfigList = fileInfoConfig.getCodeSnippetConfigList();
+        if (CollUtil.isNotEmpty(codeSnippetConfigList)) {
+            for (TemplateMakerFileConfig.CodeSnippetConfig codeSnippetConfig : codeSnippetConfigList) {
+                String code = codeSnippetConfig.getCode();
+                String condition = codeSnippetConfig.getCondition();
+                boolean boolVal = codeSnippetConfig.getBoolVal();
+                String checkType = codeSnippetConfig.getCheckType();
+                CodeSnippetCheckTypeEnum checkTypeEnum = CodeSnippetCheckTypeEnum.getEnumByValue(
+                        checkType);
+                if (Objects.isNull(checkTypeEnum)) {
+                    continue;
+                }
+                String replaceCodeSnippets = null;
+                switch (checkTypeEnum) {
+                    case EQUALS -> replaceCodeSnippets = String.format("\n<#if %s>\n%s\n</#if>\n",
+                            boolVal ? condition : "!" + condition, code);
+                    case REGEX -> {
+                        // 根据正则找到需要匹配的内容
+                        code = ReUtil.get(code, fileContent, 0);
+                        replaceCodeSnippets = String.format("\n<#if %s>\n%s\n</#if>\n",
+                                boolVal ? condition : "!" + condition, code);
+                    }
+                    default -> {
+                    }
+                }
+                // 判断目前内容中是否已有我们需要生成的代码片段，如果存在，说明已经加工过了，不需要操作，否则执行替换操作
+                boolean contains = StrUtil.contains(newFileContent, replaceCodeSnippets);
+                if (!contains) {
+                    newFileContent = StrUtil.replace(newFileContent, code,
+                            replaceCodeSnippets);
+                }
+            }
+        }
+
+        // 转义字符转换 <#noparse>...</#noparse>
+        TemplateMakerFileConfig.CodeSnippetConfig noParseConfig = fileInfoConfig.getNoParseConfig();
+        if (Objects.nonNull(noParseConfig)) {
+            String code = noParseConfig.getCode();
+            List<String> noParserContentList = ReUtil.findAll(code, fileContent, 0);
+            if (CollUtil.isNotEmpty(noParserContentList)) {
+                for (String noParserContent : noParserContentList) {
+                    String replaceCodeSnippets = String.format("<#noparse>%s</#noparse>",
+                            noParserContent);
+                    // 判断目前内容中是否存在我们需要生成的内容，如果有，说明替换过了，不需要操作
+                    boolean contains = StrUtil.contains(newFileContent, replaceCodeSnippets);
+                    if (!contains) {
+                        newFileContent = StrUtil.replace(newFileContent, noParserContent,
+                                replaceCodeSnippets);
+                    }
+                }
+            }
+        }
+
         // 文件配置信息
         Meta.FileConfig.FileInfo fileInfo = new Meta.FileConfig.FileInfo();
-        // 文件输入路径是 ftl 文件
-        fileInfo.setInputPath(fileOutputPath);
+        fileInfo.setInputPath(fileOutputPath); // 文件输入路径是 ftl 文件
         fileInfo.setOutputPath(fileInputPath);
         fileInfo.setCondition(fileInfoConfig.getCondition());
         fileInfo.setType(FileTypeEnum.FILE.getValue());
@@ -341,7 +418,7 @@ public class TemplateMaker {
             List<Meta.FileConfig.FileInfo> fileInfoList) {
         // 针对分组的策略：相同分组下的文件 merge，不同分组保留
 
-        // 1. 将所有文件配置 FileInfo 分为有分组和无分组的
+        // 1. 将所有文件配置 FileInfo 分为有分组和无分组的，先过滤出有分组的进行处理
         Map<String, List<Meta.FileConfig.FileInfo>> groupKeyFileInfoListMap = fileInfoList
                 .stream()
                 .filter(fileInfo -> StrUtil.isNotBlank(fileInfo.getGroupKey()))
@@ -377,10 +454,10 @@ public class TemplateMaker {
         List<Meta.FileConfig.FileInfo> noGroupFileInfoList = fileInfoList
                 .stream()
                 .filter(fileInfo -> StrUtil.isBlank(fileInfo.getGroupKey()))
-                .collect(Collectors.toList());
+                .toList();
         resultFileInfoList.addAll(new ArrayList<>(noGroupFileInfoList.stream()
                 .collect(
-                        Collectors.toMap(Meta.FileConfig.FileInfo::getInputPath, o -> o,
+                        Collectors.toMap(Meta.FileConfig.FileInfo::getOutputPath, o -> o,
                                 (e, r) -> r)
                 ).values()));
         return resultFileInfoList;
@@ -396,7 +473,7 @@ public class TemplateMaker {
             List<Meta.ModelConfig.ModelInfo> modelInfoList) {
         // 针对分组的策略：相同分组下的模型 merge，不同分组保留
 
-        // 1. 将所有模型配置 ModelInfo 分为有分组和无分组的
+        // 1. 将所有模型配置 ModelInfo 分为有分组和无分组的，先处理有分组下的模型信息
         Map<String, List<Meta.ModelConfig.ModelInfo>> groupKeyModelInfoListMap = modelInfoList
                 .stream()
                 .filter(modelInfo -> StrUtil.isNotBlank(modelInfo.getGroupKey()))
@@ -433,7 +510,7 @@ public class TemplateMaker {
         List<Meta.ModelConfig.ModelInfo> noGroupModelInfoList = modelInfoList
                 .stream()
                 .filter(modelInfo -> StrUtil.isBlank(modelInfo.getGroupKey()))
-                .collect(Collectors.toList());
+                .toList();
         resultModelInfoList.addAll(new ArrayList<>(noGroupModelInfoList.stream()
                 .collect(
                         Collectors.toMap(Meta.ModelConfig.ModelInfo::getFieldName, o -> o,
@@ -441,6 +518,5 @@ public class TemplateMaker {
                 ).values()));
         return resultModelInfoList;
     }
-
 
 }
